--- a/cis194.cabal
+++ b/cis194.cabal
@@ -55,8 +55,10 @@ executable cis194
     CIS194.Testing
     CIS194.Template.HW01
     CIS194.Template.HW01Tests
-    CIS194.BenS.HW01
-    CIS194.BenS.HW01Tests
+    CIS194.Template.HW02
+    CIS194.Template.HW02Tests
+    CIS194.Template.HW03
+    CIS194.Template.HW03.Fun
 
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:
