--- a/cis194.cabal
+++ b/cis194.cabal
@@ -52,6 +52,9 @@ executable cis194
 
   -- Modules included in this executable, other than Main.
   other-modules:
+    CIS194.Lectures.L01Intro
+    CIS194.Lectures.L02Lists
+    CIS194.Lectures.L03ADTs
     CIS194.Testing
     CIS194.Template.HW01
     CIS194.Template.HW01Tests
