--- a/cis194.cabal
+++ b/cis194.cabal
@@ -56,6 +56,7 @@ executable cis194
     CIS194.Lectures.L02Lists
     CIS194.Lectures.L03ADTs
     CIS194.Lectures.L04TypeClasses
+    CIS194.Lectures.L05IO
     CIS194.Testing
     CIS194.Template.HW01
     CIS194.Template.HW01Tests
@@ -71,7 +72,7 @@ executable cis194
   -- other-extensions:
 
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.8 && <4.9
+  build-depends:       base >=4.8 && <4.9, aeson, bytestring, containers
 
   -- Directories containing source files.
   hs-source-dirs:      src
