--- a/2016/cis194.cabal
+++ b/2016/cis194.cabal
@@ -51,7 +51,7 @@ executable cis194
   main-is:             Main.hs
 
   -- Modules included in this executable, other than Main.
-  other-modules:
+  other-modules:       CIS194.Week1
 
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:
