--- a/2016/cis194.cabal
+++ b/2016/cis194.cabal
@@ -52,6 +52,7 @@ executable cis194
 
   -- Modules included in this executable, other than Main.
   other-modules:       CIS194.Week1
+                       CIS194.Week2
 
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:
