--- a/2016/cis194.cabal
+++ b/2016/cis194.cabal
@@ -53,6 +53,7 @@ executable cis194
   -- Modules included in this executable, other than Main.
   other-modules:       CIS194.Week1
                        CIS194.Week2
+                       CIS194.FRP
 
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:
@@ -62,6 +63,9 @@ executable cis194
                      , HUnit
                      , QuickCheck
                      , codeworld-api
+                     , lens
+                     , mtl
+                     , transformers
 
   -- Directories containing source files.
   hs-source-dirs:      src
