--- a/2016/cis194.cabal
+++ b/2016/cis194.cabal
@@ -54,6 +54,7 @@ executable cis194
   other-modules:       CIS194.Week1
                        CIS194.Week2
                        CIS194.Week3
+                       CIS194.Week4
 
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:
@@ -66,6 +67,8 @@ executable cis194
 
   -- Directories containing source files.
   hs-source-dirs:      src
+
+  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
 
   -- Base language which the package is written in.
   default-language:    Haskell2010
